Fixing cpu only build

--- a/Source/Math/Math.vcxproj
+++ b/Source/Math/Math.vcxproj
@@ -211,6 +211,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="CPUMatrix.cpp" />
+    <ClCompile Include="latticeNoGPU.cpp" />
     <ClCompile Include="MatrixQuantizerCPU.cpp" />
     <ClCompile Include="MatrixQuantizerImpl.cpp" />
     <ClCompile Include="NoGPU.cpp" />
